--- a/index.html
+++ b/index.html
@@ -16,14 +16,21 @@
     </header>
 
     <section class="score-panel">
-    	<ul class="stars"></ul>
-    	<span class="moves"></span>
+    	<ul class="stars">
+        <li class="fa fa-star"></li>
+        <li class="fa fa-star"></li>
+        <li class="fa fa-star"></li> 
+      </ul>
+    	<span class="moves">0 Moves</span>
       <div class="restart">
   		  <i class="fa fa-repeat"></i>
     	</div>
     </section>
-
+    <section class="start-timer">
+      <label id="minutes">00</label>:<label id="seconds">00</label>
+    </section>
     <ul class="deck"></ul>
+    <div class="pop-up"></div>
   </div>
 
   <script src="js/app.js"></script>
